Исправлены основные ошибки

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 *.class
 build/
-.gradle/
 *.iml
-settings.gradle
 .idea
+
+.gradle/
+!gradle/wrapper/
+gradle/wrapper/*
+!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
